--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ tqdm>=4.65.0
 Authlib>=1.3.0
 itsdangerous>=2.1.0
 httpx>=0.24.0
+yt-dlp>=2023.10.13
+essentia-tensorflow>=2.0.1; platform_system=="Linux"
+pylast>=5.0.0
+websockets>=11.0
