--- a/requirements-worker.txt
+++ b/requirements-worker.txt
@@ -1,6 +1,6 @@
 # Requirements for Remote Worker Laptop
 yt-dlp>=2023.10.13
-essentia-tensorflow>=2.0.1
+essentia-tensorflow
 numpy>=1.24.0
 websockets>=11.0
 requests>=2.28.0
