Add multi-worker support and improve duplicate detection
- Implemented multi-worker coordinator supporting multiple workers per session
- Tasks automatically distributed across all connected workers
- Improved duplicate detection with normalized artist/title comparison
- Added youtube_id duplicate checking
- Fixed ingestion to properly check existing tracks before processing
- Added normalize_track_key function for case-insensitive duplicate detection
- Updated store_entry to check duplicates before inserting
- Multi-worker support: 2 workers = 2x speed, 3 workers = 3x speed, etc.

--- a/requirements-worker.txt
+++ b/requirements-worker.txt
@@ -1,7 +1,13 @@
-# Requirements for Remote Worker Laptop
-yt-dlp>=2023.10.13
-essentia-tensorflow
-numpy>=1.24.0
+# Requirements for standalone remote worker executable
 websockets>=11.0
 requests>=2.28.0
 certifi>=2023.0.0
+yt-dlp>=2023.0.0
+tensorflow>=2.13.0
+tf-keras>=2.13.0
+mutagen>=1.47.0
+numpy>=1.24.0
+librosa>=0.10.0
+python-dotenv>=1.0.0
+psycopg2-binary>=2.9.0
+essentia>=2.1b6.dev609
