Fix essentia installation compatibility issue
- Updated installation commands to use --no-compile flag for essentia
- Added installation script with essentia compatibility fix
- Fixed one-command setup to handle Python 3.9+ compatibility
- Essentia has Python 2 syntax that fails in Python 3.9+, --no-compile works around this

--- a/requirements-worker.txt
+++ b/requirements-worker.txt
@@ -10,4 +10,7 @@ numpy>=1.24.0
 librosa>=0.10.0
 python-dotenv>=1.0.0
 psycopg2-binary>=2.9.0
-essentia>=2.1b6.dev609
+# Note: essentia installation may require special handling
+# Try: pip install essentia --no-compile
+# Or install from conda: conda install -c conda-forge essentia
+essentia
